# asgi-lifespan

./: .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
asgi_lifespan/: __init__.py  __version__.py  _manager.py  _types.py  app.py  compat.py  context.py  lifespan.py  manager.py  middleware.py
asgi_lifespan/_concurrency/: __init__.py  asyncio.py  trio.py
asgi_lifespan/concurrency/: asyncio.py  auto.py  base.py  defaults.py
ci/: azure-pipelines.yml
scripts/: build  check  clean  install  lint  publish  test
src/asgi_lifespan/: __init__.py  __version__.py  _manager.py  _types.py
src/asgi_lifespan/_concurrency/: asyncio.py  base.py  trio.py
tests/: compat.py  concurrency.py  conftest.py  test_app.py  test_concurrency.py  test_main.py  test_manager.py  test_middleware.py  test_project.py  utils.py
